# mcabber

./: .hgignore  .hgsigs
mcabber/: AUTHORS  COPYING  ChangeLog  ChangeLog.api  Changelog  CodingStyle.txt  INSTALL  Makefile  Makefile.am  NEWS  README  TODO  autogen.sh  buddies.c  cabberrc.example  config.h.in  configure.ac  configure.in  harddefines.h  hgcset.sh  lang.h  list.h  main.c  mcabber.desktop  mcabber.pc.in  mcabberrc.example  parsecfg.c  screen.c  screen.h  server.c  server.h  socket.c  utf8.c  utf8.h  utils.c
mcabber/connwrap/: Makefile.am  Makefile.in  aclocal.m4  configure  configure.in  connwrap.c  connwrap.h  connwrap.spec  md5.c
mcabber/contrib/: cicq2mcabber.pl  conv_log_dates.pl  eventcmd  filter_statusmsg.py  mcabber_log.vim  mcwizz.pl  mcwizz.rb  merge_history.py
mcabber/contrib/events/: eventcmd  eventcmd.osd  eventcmd.pastebin  mcnotify-osx.py  mcnotify.py
mcabber/contrib/themes/: colorcli.txt  light.txt  light2.txt  mikael-256.txt  oliver.txt
mcabber/contrib/vim/: mcabber_log-ftdetect.vim  mcabber_log-syntax.vim
mcabber/debian/: changelog  control  copyright  docs  mcabber.doc-base  menu  postinst.ex  postrm.ex  preinst.ex  prerm.ex  rules  watch
mcabber/doc/: HOWTO_modules.txt  Makefile.am  README_PGP.txt  build  manpage.css  mcabber.1  mcabber.1.html  mcabber.1.txt
mcabber/doc/guide/: Makefile.am  guide.bib  guide.tex
mcabber/doc/help/: Makefile.am
mcabber/doc/help/cs/: hlp.txt  hlp_add.txt  hlp_alias.txt  hlp_authorization.txt  hlp_bind.txt  hlp_buffer.txt  hlp_chat_disable.txt  hlp_clear.txt  hlp_color.txt  hlp_connect.txt  hlp_del.txt  hlp_disconnect.txt  hlp_echo.txt  hlp_event.txt  hlp_group.txt  hlp_help.txt  hlp_iline.txt  hlp_info.txt  hlp_module.txt  hlp_move.txt  hlp_msay.txt  hlp_otr.txt  hlp_otrpolicy.txt  hlp_pgp.txt  hlp_quit.txt  hlp_rawxml.txt  hlp_rename.txt  hlp_request.txt  hlp_room.txt  hlp_roster.txt  hlp_say.txt  hlp_say_to.txt  hlp_screen_refresh.txt  hlp_set.txt  hlp_source.txt  hlp_status.txt  hlp_status_to.txt  hlp_version.txt
mcabber/doc/help/de/: hlp.txt  hlp_add.txt  hlp_alias.txt  hlp_authorization.txt  hlp_bind.txt  hlp_buffer.txt  hlp_chat_disable.txt  hlp_clear.txt  hlp_color.txt  hlp_connect.txt  hlp_del.txt  hlp_disconnect.txt  hlp_echo.txt  hlp_event.txt  hlp_group.txt  hlp_help.txt  hlp_iline.txt  hlp_info.txt  hlp_module.txt  hlp_move.txt  hlp_msay.txt  hlp_otr.txt  hlp_otrpolicy.txt  hlp_pgp.txt  hlp_quit.txt  hlp_rawxml.txt  hlp_rename.txt  hlp_request.txt  hlp_room.txt  hlp_roster.txt  hlp_say.txt  hlp_say_to.txt  hlp_screen_refresh.txt  hlp_set.txt  hlp_source.txt  hlp_status.txt  hlp_status_to.txt  hlp_version.txt
mcabber/doc/help/en/: hlp.txt  hlp_add.txt  hlp_alias.txt  hlp_authorization.txt  hlp_bind.txt  hlp_buffer.txt  hlp_carbons.txt  hlp_chat_disable.txt  hlp_clear.txt  hlp_color.txt  hlp_connect.txt  hlp_del.txt  hlp_disconnect.txt  hlp_echo.txt  hlp_event.txt  hlp_group.txt  hlp_help.txt  hlp_iline.txt  hlp_info.txt  hlp_module.txt  hlp_move.txt  hlp_msay.txt  hlp_otr.txt  hlp_otrpolicy.txt  hlp_pgp.txt  hlp_quit.txt  hlp_rawxml.txt  hlp_rename.txt  hlp_request.txt  hlp_room.txt  hlp_roster.txt  hlp_say.txt  hlp_say_to.txt  hlp_screen_refresh.txt  hlp_set.txt  hlp_source.txt  hlp_status.txt  hlp_status_to.txt  hlp_version.txt
mcabber/doc/help/fr/: hlp.txt  hlp_add.txt  hlp_alias.txt  hlp_authorization.txt  hlp_bind.txt  hlp_buffer.txt  hlp_carbons.txt  hlp_chat_disable.txt  hlp_clear.txt  hlp_color.txt  hlp_connect.txt  hlp_del.txt  hlp_disconnect.txt  hlp_echo.txt  hlp_event.txt  hlp_group.txt  hlp_help.txt  hlp_iline.txt  hlp_info.txt  hlp_module.txt  hlp_move.txt  hlp_msay.txt  hlp_otr.txt  hlp_otrpolicy.txt  hlp_pgp.txt  hlp_quit.txt  hlp_rawxml.txt  hlp_rename.txt  hlp_request.txt  hlp_room.txt  hlp_roster.txt  hlp_say.txt  hlp_say_to.txt  hlp_screen_refresh.txt  hlp_set.txt  hlp_source.txt  hlp_status.txt  hlp_status_to.txt  hlp_version.txt
mcabber/doc/help/it/: hlp.txt  hlp_add.txt  hlp_alias.txt  hlp_authorization.txt  hlp_bind.txt  hlp_buffer.txt  hlp_chat_disable.txt  hlp_clear.txt  hlp_color.txt  hlp_connect.txt  hlp_del.txt  hlp_disconnect.txt  hlp_echo.txt  hlp_event.txt  hlp_group.txt  hlp_help.txt  hlp_iline.txt  hlp_info.txt  hlp_module.txt  hlp_move.txt  hlp_msay.txt  hlp_otr.txt  hlp_otrpolicy.txt  hlp_pgp.txt  hlp_quit.txt  hlp_rawxml.txt  hlp_rename.txt  hlp_request.txt  hlp_room.txt  hlp_roster.txt  hlp_say.txt  hlp_say_to.txt  hlp_screen_refresh.txt  hlp_set.txt  hlp_source.txt  hlp_status.txt  hlp_status_to.txt  hlp_version.txt
mcabber/include/: config.h.in
mcabber/lang/: POSIX.txt  es_ES.txt
mcabber/libjabber/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in  expat.c  genhash.c  hashtable.c  jabber.h  jconn.c  jid.c  jpacket.c  jutil.c  libxode.h  log.c  pool.c  pproxy.c  rate.c  sha.c  snprintf.c  socket.c  str.c  xmlnode.c  xmlparse.c  xmlrole.c  xmltok.c  xmltok_impl_c.h  xmltok_ns_c.h  xstream.c
mcabber/macros/: define_dir.m4  libotr.m4  timezone.m4
mcabber/mcabber/: COPYING  Makefile.am  api.h  caps.c  caps.h  carbons.c  carbons.h  commands.c  commands.h  compl.c  compl.h  events.c  events.h  fifo.c  fifo.h  fifo_internal.c  hbuf.c  hbuf.h  help.c  help.h  histolog.c  histolog.h  hooks.c  hooks.h  logprint.h  main.c  main.h  modules.c  modules.h  nohtml.c  nohtml.h  otr.c  otr.h  pgp.c  pgp.h  roster.c  roster.h  screen.c  screen.h  settings.c  (+18 more)
mcabber/modules/: Makefile.am
mcabber/modules/beep/: Makefile.am  beep.c
mcabber/modules/fifo/: Makefile.am  fifo.c  fifo_module.c
mcabber/modules/urlregex/: Makefile.am  urlregex.c
mcabber/modules/xttitle/: Makefile.am  xttitle.c
mcabber/src/: ACKNOWLEDGEMENT  Makefile  Makefile.am  TODO  TODO.txt  buddies.c  buddies.h  cabberrc.example  caps.c  caps.h  commands.c  commands.h  compl.c  compl.h  events.c  events.h  fifo.c  fifo.h  harddefines.h  hbuf.c  hbuf.h  help.c  help.h  histolog.c  histolog.h  hooks.c  hooks.h  jab_iq.c  jab_priv.h  jabglue.c  jabglue.h  lang.c  list.h  logprint.h  main.c  main.h  nohtml.c  nohtml.h  otr.c  otr.h  (+30 more)
(+153 files in other folders)
